--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Retrofit MVVM</string>
+
+    <string name="general_loading">Cargando...</string>
 </resources>
