Clase 4 - Proyecto Base avance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Retrofit MVVM</string>
 
     <string name="general_loading">Cargando...</string>
+
+    <string name="butLogin">Login</string>
+
 </resources>
